--- a/index.html
+++ b/index.html
@@ -17,10 +17,47 @@
             margin: auto;
             background: url("board.jpg") no-repeat;
         }
+
+        div#messageArea {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            color: rgb(83, 175, 19);
+        }
+
+        table {
+            position: absolute;
+            top: 98px;
+            left: 173x;
+            border-spacing: 0px;
+            color: red;
+        }
+
+        td {
+            width: 94px;
+            height: 94px;
+            color: red;
+        }
+
+        form {
+            position: absolute;
+            bottom: 0px;
+            right: 0px;
+            padding: 15px;
+            background-color: rgb(83, 175, 19);
+        }
+
+        form input {
+            background-color: rgb(152, 207, 113);
+            border-color: rgb(83, 175, 19);
+            font-size: 1em;
+        }
+
     </style>
 </head>
 <body>
     <div id="board">
+        <div id="messageArea"></div>
         <table>
             <tr>
                 <td id="00"></td> 
@@ -92,6 +129,10 @@
                 <td id="66"></td> 
             </tr>
         </table>
+        <form>
+            <input type="text" id="guessInput" placeholder="A0">
+            <input type="button" id="fireButton" value="Fire!">
+        </form>
     </div>
 
     <script src="battleship.js"></script>
