--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
 
         table {
             position: absolute;
+            left: 173px;
             top: 98px;
-            left: 173x;
             border-spacing: 0px;
-            color: red;
         }
 
         td {
             width: 94px;
             height: 94px;
-            color: red;
         }
 
         form {
@@ -53,6 +51,14 @@
             font-size: 1em;
         }
 
+        .hit {
+            background: url("ship.png") no-repeat center center;
+        }
+
+        .miss {
+            background: url("miss.png") no-repeat center center;
+        }
+
     </style>
 </head>
 <body>
@@ -60,7 +66,7 @@
         <div id="messageArea"></div>
         <table>
             <tr>
-                <td id="00"></td> 
+                <td id="00" class="miss"></td> 
                 <td id="01"></td>
                 <td id="02"></td>
                 <td id="03"></td>
@@ -71,9 +77,9 @@
 
             <tr>
                 <td id="10"></td>
-                <td id="11"></td> 
+                <td id="11"  class="hit"></td> 
                 <td id="12"></td> 
-                <td id="13"></td> 
+                <td id="13" class="hit"></td> 
                 <td id="14"></td> 
                 <td id="15"></td> 
                 <td id="16"></td> 
@@ -84,8 +90,8 @@
                 <td id="21"></td> 
                 <td id="22"></td> 
                 <td id="23"></td> 
-                <td id="24"></td> 
-                <td id="25"></td> 
+                <td id="24" class="miss"></td> 
+                <td id="25"  class="hit"></td> 
                 <td id="26"></td> 
             </tr>
 
@@ -93,7 +99,7 @@
                 <td id="30"></td>
                 <td id="31"></td> 
                 <td id="32"></td> 
-                <td id="33"></td> 
+                <td id="33" class="hit"></td> 
                 <td id="34"></td> 
                 <td id="35"></td> 
                 <td id="36"></td> 
@@ -114,7 +120,7 @@
                 <td id="51"></td> 
                 <td id="52"></td> 
                 <td id="53"></td> 
-                <td id="54"></td> 
+                <td id="54" class="miss"></td> 
                 <td id="55"></td> 
                 <td id="56"></td> 
             </tr>
